--- a/vellum/weave.html
+++ b/vellum/weave.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div id="root"></div>
-  <script type="text/babel" data-type="module" src="app.jsx"></script>
+  <script type="text/babel" data-type="module" src="weave.jsx"></script>
   <script type="text/babel">
     const root = ReactDOM.createRoot(document.getElementById("root"));
     root.render(React.createElement(WeaveStandalone));
