--- a/vellum/index.html
+++ b/vellum/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8"/>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Texturas v0.8</title>
+  <title>Textures v0.8</title>
   <!-- Google Fonts: Roboto Mono variable weight for Weave relevance encoding -->
   <link rel="preconnect" href="https://fonts.googleapis.com"/>
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin/>
